# cardiac-cells-py

./: README.md  setup.cfg  setup.py
.github/: CODEOWNERS
cardiac_cells_py/cell_models/: __init__.py  cell_model.py
cardiac_cells_py/cell_models/minimal_model/: model.py  utils.py
cardiac_cells_py/experiments/: ap_restitution.py  experiment_result.py  experiments.py  measurements.py  steady_state.py  utils.py
