[metadata]
name = cardiac-cells-py
version = 0.0.0
description = Cardiac Cell Models implemented in Python
long_description = file: README.md
url = https://github.com/caledezma/cardiac-cell-py
author = Carlos Ledezma

[options]
python_requires= >=3.8
packages = find:
include_package_data=True
install_requires =
  # Version required only for the NDArray types
  numpy>=1.21.0rc2
  scipy

[options.extras_require]
mypy =
  mypy

examples =
  click
  jupyterlab
  matplotlib
  pandas
  plotly
